# pyvenue

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: dev.py
src/pyvenue/: __init__.py  logging_config.py  venue.py
src/pyvenue/bench/: bench_orderflow.py  profile_orderflow.py
src/pyvenue/domain/: __init__.py  commands.py  events.py  types.py
src/pyvenue/engine/: __init__.py  engine.py  orderbook.py  state.py
src/pyvenue/infra/: __init__.py  clock.py  eventlog.py  ids.py
src/pyvenue/persistence/: event_store.py  recovery.py  snapshot_store.py
tests/: test_accounts.py  test_engine.py  test_fees.py  test_marketdata.py  test_matching.py  test_order_types.py  test_orderbook_invariants.py  test_partial_fill_leak.py  test_persistence.py  test_replay_and_state.py  test_smoke.py  test_venue.py  utils.py
